--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -3,10 +3,9 @@
 <title>Changelog - DescicloApp para Firefox</title>
 <link rel="shortcut icon" href="../icons/icon.png" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
-<link rel="stylesheet" href="../popup.html" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <link rel="stylesheet" href="../css/button.css" />
-<script src="../js/changelog.js"></script>
+<script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
 	font-family: Helvetica, sans-serif;
@@ -32,11 +31,11 @@ a:visited {
 	bottom: 0; 
 	border-top:#999 solid 1px;
 	border-width: 1px 0;
-	}
+}
 
 #rodape p {
 	margin:0;
-	}
+}
 </style>
 </head>
 <body>
@@ -56,6 +55,19 @@ a:visited {
 <br>
 Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
+<u><b>Vers&atilde;o 4.0</b></u>
+<br><br>
+Lan&ccedil;ada dia 03 de outubro de 2012:<br>
+Uma atualiza&ccedil;&atilde;ozinha r&aacute;pida:<br>
+<a href="http://aloogle.googlecode.com/files/DescicloApp_4_0.crx" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<br><br>
+<font color="#9400d3">&bull;</font>Melhoras na interface.<br>
+<font color="#9400d3">&bull;</font>Colocada fun&ccedil;&atilde;o de busca pela barra de buscas do Firefox, veja como adicionar <a href="busca.html">aqui</a>.<br>
+<font color="#9400d3">&bull;</font>Colocado um bot&atilde;o de mais, que ao clicar aparece outros namespaces na popup:<br>
+&nbsp;&nbsp;<font color="#00ff00">&bull;</font>Digitando algo na barra de busca e depois clicando em qualquer um dos namespaces te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o ou edi&ccedil;&atilde;o dele, por exemplo, digitar "DescicloApp" na barra de busca, clicar em "Mais" e depois clicar no bot&atilde;o do Descion&aacute;rio te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o do verbete DescicloApp no Descion&aacute;rio, mesma coisa com Desnot&iacute;cias e etc :D<br>
+<font color="#9400d3">&bull;</font>Corre&ccedil;&atilde;o de bugs:<br>
+&nbsp;&nbsp;<font color="#ff0000">&bull;</font>Resolvido o bug de quando voc&ecirc; clicava v&aacute;ria vezes no bot&atilde;o e ele abria v&aacute;rias janelas, agora ele abre e fecha apenas uma.
+<br><br>
 <u><b>Vers&atilde;o 3.7</b></u>
 <br><br>
 Lan&ccedil;ada dia 13 de setembro de 2012:<br>
@@ -68,7 +80,7 @@ Primeira vers&atilde;o para Firefox:<br>
 <div class="clear"></div>
 </div>
 <div id="rodape">
-<div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right">All your extension are belong to <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
+<div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
 </div>
 </body>
 </html>
