--- a/DescicloApp/chrome/DescicloApp/paginas/faq.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/faq.html
@@ -31,11 +31,11 @@ a:visited {
 	bottom: 0; 
 	border-top:#999 solid 1px;
 	border-width: 1px 0;
-	}
+}
 
 #rodape p {
 	margin:0;
-	}
+}
 </style>
 </head>
 <body>
@@ -65,11 +65,16 @@ Por culpa de <a href="http://desciclopedia.org/wiki/Servidor_da_Desciclop%C3%A9d
 <br><br>
 <b>Por que as vezes quando eu clico em algum "Minha ..." me leva pra uma p&aacute;gina de IP?</b>
 <br>
-Voc&ecirc; tem que estar logado na Desciclop&eacute;dia para te levar pra sua p&aacute;gina, se n&atilde;o estiver ai te leva pra p&aacute;gina do seu IP mesmo...</div>
+Voc&ecirc; tem que estar logado na Desciclop&eacute;dia para te levar pra sua p&aacute;gina, se n&atilde;o estiver ai te leva pra p&aacute;gina do seu IP mesmo...
+<br><br>
+<b>Por que o DescicloApp para Firefox n&atilde;o tem a p&aacute;gina de op&ccedil;&otilde;es?</b>
+<br>
+Porque o jeito de fazer uma p&aacute;gina de op&ccedil;&otilde;es no Firefox &eacute; diferente do Chrome e Opera, por isso quem faz a extens&atilde;o precisa de um tempo pra aprender, talvez na pr&oacute;xima vers&atilde;o tenha.</div>
 <div class="clear"></div>
 </div>
 <div id="rodape">
-<div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right">All your extension are belong to <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
+<div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
+<div id="descicloapp" style="display:none" />
 </div>
 </body>
 </html>
