Código da versão 4.0.2
A Mozilla não aceitou a versão 4.0 por causa de alguns erros, acho que
isso resolve

--- a/DescicloApp/chrome/DescicloApp/msg.html
+++ b/DescicloApp/chrome/DescicloApp/msg.html
@@ -61,7 +61,7 @@ body {
 </style> 
 </head>
 <body>
-<div class="tooltip6" id="voltar"><span>Voltar</span></div><div id="fechar" class="tooltip8"><span>Fechar</span></div></div><div align="center"><h4>Enviar mensagem</h4></div><hr>
+<div class="tooltip6" id="voltar"><span>Voltar</span></div><div id="fechar" class="tooltip8"><span>Fechar</span></div><div align="center"><h4>Enviar mensagem</h4></div><hr>
 <br>
 <table width="25px"><tr><div><div class="tooltip4"><span>Escolha o dom&iacute;nio alternativo</span><select id="alternativo" style="height:22px;width:50px; border-top-left-radius: 10px; border-bottom-left-radius: 10px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; float:left;">
 <option value="desciclopedia.org">.org</option>
