--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -59,10 +59,10 @@ Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
 Lan&ccedil;ada dia 03 de outubro de 2012:<br>
 Uma atualiza&ccedil;&atilde;ozinha r&aacute;pida:<br>
-<a href="http://aloogle.googlecode.com/files/DescicloApp_4_0.crx" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.0.2/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
 <br><br>
 <font color="#9400d3">&bull;</font>Melhoras na interface.<br>
-<font color="#9400d3">&bull;</font>Colocada fun&ccedil;&atilde;o de busca pela barra de buscas do Firefox, veja como adicionar <a href="busca.html">aqui</a>.<br>
+<font color="#9400d3">&bull;</font>Colocada fun&ccedil;&atilde;o de busca pela barra de buscas do Firefox, veja como adicionar <a href="busca.html" target="_blank">aqui</a>.<br>
 <font color="#9400d3">&bull;</font>Colocado um bot&atilde;o de mais, que ao clicar aparece outros namespaces na popup:<br>
 &nbsp;&nbsp;<font color="#00ff00">&bull;</font>Digitando algo na barra de busca e depois clicando em qualquer um dos namespaces te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o ou edi&ccedil;&atilde;o dele, por exemplo, digitar "DescicloApp" na barra de busca, clicar em "Mais" e depois clicar no bot&atilde;o do Descion&aacute;rio te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o do verbete DescicloApp no Descion&aacute;rio, mesma coisa com Desnot&iacute;cias e etc :D<br>
 <font color="#9400d3">&bull;</font>Corre&ccedil;&atilde;o de bugs:<br>
