--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -71,7 +71,7 @@ div.share:active {
 <h1>Sobre <a id="opera" title="Tamb&eacute;m usa Opera? Fa&ccedil;a download do DescicloApp para Opera!! Clique aqui"><img src="../imagens/opera.png" height="30px" align="right"></a><a id="chrome" title="Tamb&eacute;m usa Chrome? Fa&ccedil;a download do DescicloApp para Google Chrome!! Clique aqui"><img src="../imagens/chrome.png" height="30px" align="right"></a></h1>
 <div>
 <h3>Vers&atilde;o</h3>
-<div>4.0</div>
+<div>4.0.2</div>
 <hr>
 <h3>Desenvolvido por</h3>
 <div>
@@ -108,7 +108,7 @@ E v&aacute;rios outros sites...
 <br><br>
 E se voc&ecirc; gostou muito da extens&atilde;o, compartilhe com seus amigos que conhecem a Desciclop&eacute;dia :D
 <br><br><br>
-<div class="share" align="center"><div class="tooltip7"><span>&nbsp;&nbsp;&nbsp;<button class="toolti" id="sharefacebook"><div style="float:left;"><img src="../imagens/facebook.png" width="45px"><br><font style="color: #ffffff; text-decoration: none;">Facebook</font></div></button>&nbsp;&nbsp;&nbsp;<button class="toolti" id="sharetwitter"><div style="float:right"><img src="../imagens/twitter.png" width="45px"><br><font style="color: #ffffff; text-decoration: none;">Twitter</font></div></button><br><br><button class="toolti" id="sharegoogleplus"><div><img src="../imagens/googleplus.png" width="50px"><br><font style="color: #ffffff; text-decoration: none;">Google+</font></a></div></button></span><b><a>Compartilhar</a></b><a>&nbsp;<img src="../imagens/metrosharebyaloogle.png" width="15px"></div></div>
+<div class="share" align="center"><div class="tooltip7"><span>&nbsp;&nbsp;&nbsp;<button class="toolti" id="sharefacebook"><div style="float:left;"><img src="../imagens/facebook.png" width="45px"><br><font style="color: #ffffff; text-decoration: none;">Facebook</font></div></button>&nbsp;&nbsp;&nbsp;<button class="toolti" id="sharetwitter"><div style="float:right"><img src="../imagens/twitter.png" width="45px"><br><font style="color: #ffffff; text-decoration: none;">Twitter</font></div></button><br><br><button class="toolti" id="sharegoogleplus"><div><img src="../imagens/googleplus.png" width="50px"><br><font style="color: #ffffff; text-decoration: none;">Google+</font></div></button></span><b><a>Compartilhar</a></b>&nbsp;<img src="../imagens/metrosharebyaloogle.png" width="15px"></div></div>
 <br>
 <div id="descicloapp" style="display:none" />
 </body>
