--- a/DescicloApp/chrome/DescicloApp/popup.html
+++ b/DescicloApp/chrome/DescicloApp/popup.html
@@ -52,6 +52,7 @@ a.script:active {
 	vertical-align:middle;
 	border-radius: 3px;
 	-moz-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 .menuitem:hover {
@@ -61,6 +62,7 @@ a.script:active {
 	border: #000000 solid 1px;
 	background:url(imagens/preto_real_player.png);
 	-moz-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 .menuitem:active {
@@ -86,11 +88,13 @@ a.script:active {
 
 di.sombra {
 	-moz-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 div.sombra:hover {
 	box-shadow: 3px 3px 3px rgba(0, 0, 255, 0.2);
 	-moz-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 div.sombra:active {
