Código da versão 4.0.6
A Mozilla não aceitou a versão 4.0.2 mas tamo tentando

--- a/DescicloApp/chrome/DescicloApp/paginas/busca.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/busca.html
@@ -13,6 +13,7 @@
 <link rel="search" type="application/opensearchdescription+xml" href="https://aloogle.googlecode.com/svn/trunk/conjuntos/extensoes/descicloapp/buscadescicloapporg.xml" title="Desciclop&eacute;dia (desnoticias.org)" />
 <link rel="search" type="application/opensearchdescription+xml" href="https://aloogle.googlecode.com/svn/trunk/conjuntos/extensoes/descicloapp/buscadescicloappsophia.xml" title="Desciclop&eacute;dia (sophia.)" />
 <link rel="search" type="application/opensearchdescription+xml" href="https://aloogle.googlecode.com/svn/trunk/conjuntos/extensoes/descicloapp/buscadescicloapproberto.xml" title="Desciclop&eacute;dia (roberto.)" />
+<script src="../js/jquery/jquery.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
@@ -54,6 +55,9 @@ Para adicionar a busca na Desciclop&eacute;dia/DescicloApp na barra de buscas do
 3. Pronto :)<br> <s>se voc&ecirc; n&atilde;o conseguiu fazer isso voc&ecirc; &eacute; t&atilde;o inteligente quanto a <a href="http://desciclopedia.org/wiki/Carla_Perez" target="_blank" title="Carla Perez">Carla Perez</a></s>
 <br><br>
 <img src="../imagens/printexemplobusca.png">
-</div></div>
+</div>
+<div style="display:none">
+<div id="descicloapp"/><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
+</div>
 </body>
 </html>
