--- a/DescicloApp/chrome/DescicloApp/msg.html
+++ b/DescicloApp/chrome/DescicloApp/msg.html
@@ -74,7 +74,7 @@ body {
 <option value="roberto.desciclopedia.org">roberto.</option>
 </select></div><input type="text" id="q" autocomplete="on" class="text" style="float:left; width: 255px; border-top-left-radius: 0px; border-bottom-left-radius: 0px; float: left;" placeholder="Enviar para..." /></div></tr></table>
 <br><br>
-<div class="tooltip5"><span>Enviar mensagem (discuss&atilde;o)</span><input type="submit" class="azul" id="mensagem" style="min-width: 4em; border-top-right-radius: 0px; border-bottom-right-radius: 0px; float: left; width: 152px; border: 1px solid #aaa;" value="Mensagem" /></div><div class="tooltip5"><span>Enviar e-mail (contatar usu&aacute;rio)</span><input type="submit" class="azul" id="email" value="E-mail" style="min-width: 4em; border-top-left-radius: 0px; border-bottom-left-radius: 0px; float: left; width: 152px; border: 1px solid #aaa;" /></div>
+<div class="tooltip5"><span>Enviar mensagem (discuss&atilde;o)</span><input type="submit" class="cinza" id="mensagem" style="min-width: 4em; border-top-right-radius: 0px; border-bottom-right-radius: 0px; float: left; width: 152px; border: 1px solid #aaa;" value="Mensagem" /></div><div class="tooltip5"><span>Enviar e-mail (contatar usu&aacute;rio)</span><input type="submit" class="cinza" id="email" value="E-mail" style="min-width: 4em; border-top-left-radius: 0px; border-bottom-left-radius: 0px; float: left; width: 152px; border: 1px solid #aaa;" /></div>
 
 
 
