--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -5,6 +5,7 @@
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <link rel="stylesheet" href="../css/button.css" />
+<script src="../js/jquery/jquery.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
@@ -55,11 +56,13 @@ a:visited {
 <br>
 Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
+<b>NOTA:</b> <i>A extens&atilde;o funciona melhor no Firefox 16+.</i>
+<br><br>
 <u><b>Vers&atilde;o 4.0</b></u>
 <br><br>
 Lan&ccedil;ada dia 03 de outubro de 2012:<br>
 Uma atualiza&ccedil;&atilde;ozinha r&aacute;pida:<br>
-<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.0.2/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.0.6/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
 <br><br>
 <font color="#9400d3">&bull;</font>Melhoras na interface.<br>
 <font color="#9400d3">&bull;</font>Colocada fun&ccedil;&atilde;o de busca pela barra de buscas do Firefox, veja como adicionar <a href="busca.html" target="_blank">aqui</a>.<br>
@@ -81,6 +84,8 @@ Primeira vers&atilde;o para Firefox:<br>
 </div>
 <div id="rodape">
 <div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
+<div style="display:none">
+<div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </div>
 </body>
 </html>
