--- a/DescicloApp/chrome/DescicloApp/paginas/faq.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/faq.html
@@ -3,8 +3,8 @@
 <title>FAQ - DescicloApp para Firefox</title>
 <link rel="shortcut icon" href="../icons/icon.png" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
-<link rel="stylesheet" href="../popup.html" />
 <link rel="stylesheet" href="../css/paginas.css" />
+<script src="../js/jquery/jquery.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
@@ -74,7 +74,8 @@ Porque o jeito de fazer uma p&aacute;gina de op&ccedil;&otilde;es no Firefox &ea
 </div>
 <div id="rodape">
 <div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
-<div id="descicloapp" style="display:none" />
+<div style="display:none">
+<div id="descicloapp"/><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </div>
 </body>
 </html>
