--- a/DescicloApp/chrome/DescicloApp/paginas/opera.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/opera.html
@@ -3,9 +3,9 @@
 <title>Download - DescicloApp para Opera</title>
 <link rel="shortcut icon" href="../icons/icon.png" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
-<link rel="stylesheet" href="../popup.html" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <link rel="stylesheet" href="../css/button.css" />
+<script src="../js/jquery/jquery.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
@@ -47,6 +47,9 @@ a:visited {
 5. Pronto :)</div>
 <br><br>
 <div style="align:center;"><a href="../imagens/printdescicloappopera3.jpg" title="Clique para ampliar"><img src="../imagens/printdescicloappopera3.jpg" height="200"></a></div>
-</div></div>
+</div>
+<div style="display:none">
+<div id="descicloapp"/><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
+</div>
 </body>
 </html>
