--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -3,14 +3,20 @@
 <title>Sobre - DescicloApp para Firefox</title>
 <link rel="shortcut icon" href="../icons/icon.png"> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/">
-<link rel="stylesheet" href="../popup.html">
 <link rel="stylesheet" href="../css/paginas.css">
 <link rel="stylesheet" href="../css/button.css">
 <link rel="stylesheet" href="../css/tooltip.css">
+<script src="../js/jquery/jquery.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
 	font-family: Helvetica, sans-serif;
+}
+
+hr {
+	border: 0px;
+	height: 1px;
+	background-color: #0000ff;
 }
 
 a {
@@ -71,7 +77,7 @@ div.share:active {
 <h1>Sobre <a id="opera" title="Tamb&eacute;m usa Opera? Fa&ccedil;a download do DescicloApp para Opera!! Clique aqui"><img src="../imagens/opera.png" height="30px" align="right"></a><a id="chrome" title="Tamb&eacute;m usa Chrome? Fa&ccedil;a download do DescicloApp para Google Chrome!! Clique aqui"><img src="../imagens/chrome.png" height="30px" align="right"></a></h1>
 <div>
 <h3>Vers&atilde;o</h3>
-<div>4.0.2</div>
+<div>4.0.6</div>
 <hr>
 <h3>Desenvolvido por</h3>
 <div>
