Codigo da versao 4.1

--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -58,10 +58,18 @@ Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
 <b>NOTA:</b> <i>A extens&atilde;o funciona melhor no Firefox 16+.</i>
 <br><br>
-<u><b>Vers&atilde;o 4.0</b></u>
+<u><b>Vers&atilde;o 4.1</b></u>
+<br><br>
+Lan&ccedil;ada dia 17 de outubro de 2012:<br>
+S&oacute; pra acompanhar:<br>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.1/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<br><br>
+<font color="#9400d3">&bull;</font>Os outros DescicloApp's tiveram a vers&atilde;o 4.1 apenas para corrigir um bug na p&aacute;gina de op&ccedil;&otilde;es, como o DescicloApp para Firefox ainda n&atilde;o tem a p&aacute;gina de op&ccedil;&otilde;es essa vers&atilde;o apenas corrige alguns bugs.
+<br><br>
+<u><b>Vers&atilde;o 4.0</b></u> <font style="color:silver;">n&atilde;o foi lan&ccedil;ada normalmente porque a Mozilla ficou enrolando pra aceitar</font>
 <br><br>
 Lan&ccedil;ada dia 03 de outubro de 2012:<br>
-Uma atualiza&ccedil;&atilde;ozinha r&aacute;pida:<br>
+Uma atualiza&ccedil;&atilde;o:<br>
 <a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.0.6/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
 <br><br>
 <font color="#9400d3">&bull;</font>Melhoras na interface.<br>
