--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -77,7 +77,7 @@ div.share:active {
 <h1>Sobre <a id="opera" title="Tamb&eacute;m usa Opera? Fa&ccedil;a download do DescicloApp para Opera!! Clique aqui"><img src="../imagens/opera.png" height="30px" align="right"></a><a id="chrome" title="Tamb&eacute;m usa Chrome? Fa&ccedil;a download do DescicloApp para Google Chrome!! Clique aqui"><img src="../imagens/chrome.png" height="30px" align="right"></a></h1>
 <div>
 <h3>Vers&atilde;o</h3>
-<div>4.1</div>
+<div>4.1.2</div>
 <hr>
 <h3>Desenvolvido por</h3>
 <div>
@@ -93,12 +93,12 @@ Se voc&ecirc; quiser <a href="http://desciclopedia.org/wiki/Dar" target="_blank"
 <hr>
 <h3>Agradecimentos</h3>
 <div>
-Ao <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:UltraJohnn%C3%BF" target="_blank">UltraJohnn&yuml;</a> e ao <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:Siphodemos" target="_blank">Siphodemos</a> por terem feito uma &oacute;tima divulga&ccedil;&atilde;o. 
+Ao <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:UltraJohnn%C3%BF" target="_blank" title="P&aacute;gina do UltraJohnn&yuml; na Desciclop&eacute;dia">UltraJohnn&yuml;</a> e ao <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:Siphodemos" target="_blank" title="P&aacute;gina do Siphodemos na Desciclop&eacute;dia">Siphodemos</a> por terem feito uma &oacute;tima divulga&ccedil;&atilde;o. 
 </div>
 <hr>
 <h3>GitHub</h3>
 <div>
-Caso <a href="http://desciclopedia.org/wiki/Voc%C3%AA" target="_blank" title="Voc&ecirc;">voc&ecirc;</a> seja desenvolvedor (<a href="http://desciclopedia.org/wiki/Ou_n%C3%A3o" target="_blank" title="Ou n&atilde;o">ou n&atilde;o</a>) e queira ter uma ideia de como a extens&atilde;o foi feita, <a href="https://github.com/alefesouza/descicloapp-chrome" target="_blank" title="Reposit&oacute;rio da extens&atilde;o no GitHub">clique aqui</a> para ver o c&oacute;digo-fonte.
+Caso <a href="http://desciclopedia.org/wiki/Voc%C3%AA" target="_blank" title="Voc&ecirc;">voc&ecirc;</a> seja desenvolvedor (<a href="http://desciclopedia.org/wiki/Ou_n%C3%A3o" target="_blank" title="Ou n&atilde;o">ou n&atilde;o</a>) e queira ter uma ideia de como a extens&atilde;o foi feita, <a href="https://github.com/alefesouza/descicloapp-firefox" target="_blank" title="Reposit&oacute;rio da extens&atilde;o no GitHub">clique aqui</a> para ver o c&oacute;digo-fonte.
 </div>
 <hr>
 <h3>Cr&eacute;ditos</h3>
