--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -62,7 +62,7 @@ Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
 Lan&ccedil;ada dia 17 de outubro de 2012:<br>
 S&oacute; pra acompanhar:<br>
-<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.1.2/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.1.4/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
 <br><br>
 <font color="#9400d3">&bull;</font>Os outros DescicloApp's tiveram a vers&atilde;o 4.1 apenas para corrigir um bug na p&aacute;gina de op&ccedil;&otilde;es, como o DescicloApp para Firefox ainda n&atilde;o tem a p&aacute;gina de op&ccedil;&otilde;es essa vers&atilde;o apenas corrige alguns bugs.
 <br><br>
@@ -77,7 +77,7 @@ Uma atualiza&ccedil;&atilde;o:<br>
 <font color="#9400d3">&bull;</font>Colocado um bot&atilde;o de mais, que ao clicar aparece outros namespaces na popup:<br>
 &nbsp;&nbsp;<font color="#00ff00">&bull;</font>Digitando algo na barra de busca e depois clicando em qualquer um dos namespaces te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o ou edi&ccedil;&atilde;o dele, por exemplo, digitar "DescicloApp" na barra de busca, clicar em "Mais" e depois clicar no bot&atilde;o do Descion&aacute;rio te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o do verbete DescicloApp no Descion&aacute;rio, mesma coisa com Desnot&iacute;cias e etc :D<br>
 <font color="#9400d3">&bull;</font>Corre&ccedil;&atilde;o de bugs:<br>
-&nbsp;&nbsp;<font color="#ff0000">&bull;</font>Resolvido o bug de quando voc&ecirc; clicava v&aacute;ria vezes no bot&atilde;o e ele abria v&aacute;rias janelas, agora ele abre e fecha apenas uma.
+&nbsp;&nbsp;<font color="#ff0000">&bull;</font>Resolvido o bug de quando voc&ecirc; clicava v&aacute;ria vezes no bot&atilde;o e ele abria v&aacute;rias janelas, agora ele abre e fecha apenas uma. <font color="orange">Acho que por isso que a Mozilla n&atilde;o tava aceitando, por isso coloquei de volta por um tempo.</font>
 <br><br>
 <u><b>Vers&atilde;o 3.7</b></u>
 <br><br>
