Codigo da versao 4.3

--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -41,7 +41,7 @@ a:visited {
 </head>
 <body>
 <div id="navbar-container" style="background: url('../imagens/batata.png') no-repeat bottom #f1f1f1;">
-<div id="navbar-content-title"><img src="../icons/icon_48.png">DescicloApp</div>
+<div id="navbar-content-title"><img src="../icons/icon_48.png"><br>DescicloApp</div>
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item navbar-item-selected">Changelog</li>
@@ -58,7 +58,16 @@ Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
 <b>NOTA:</b> <i>A extens&atilde;o funciona melhor no Firefox 16+.</i>
 <br><br>
-<u><b>Vers&atilde;o 4.1</b></u>
+<u><b>Vers&atilde;o 4.3</b></u>
+<br><br>
+Lan&ccedil;ada dia 15 de novembro de 2012:<br>
+Melhoras:<br>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.3/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<br><br>
+<font color="#9400d3">&bull;</font>Melhoras nas interface.<br>
+<font color="#9400d3">&bull;</font>E outras melhoras n&atilde;o muito significantes.
+<br><br>
+<u><b>Vers&atilde;o 4.1</b></u> <font style="color:silver;">tamb&eacute;m n&atilde;o foi lan&ccedil;ada normalmente porque a Mozilla ficou enrolando pra aceitar</font>
 <br><br>
 Lan&ccedil;ada dia 17 de outubro de 2012:<br>
 S&oacute; pra acompanhar:<br>
@@ -77,7 +86,7 @@ Uma atualiza&ccedil;&atilde;o:<br>
 <font color="#9400d3">&bull;</font>Colocado um bot&atilde;o de mais, que ao clicar aparece outros namespaces na popup:<br>
 &nbsp;&nbsp;<font color="#00ff00">&bull;</font>Digitando algo na barra de busca e depois clicando em qualquer um dos namespaces te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o ou edi&ccedil;&atilde;o dele, por exemplo, digitar "DescicloApp" na barra de busca, clicar em "Mais" e depois clicar no bot&atilde;o do Descion&aacute;rio te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o do verbete DescicloApp no Descion&aacute;rio, mesma coisa com Desnot&iacute;cias e etc :D<br>
 <font color="#9400d3">&bull;</font>Corre&ccedil;&atilde;o de bugs:<br>
-&nbsp;&nbsp;<font color="#ff0000">&bull;</font>Resolvido o bug de quando voc&ecirc; clicava v&aacute;ria vezes no bot&atilde;o e ele abria v&aacute;rias janelas, agora ele abre e fecha apenas uma. <font color="orange">Acho que por isso que a Mozilla n&atilde;o tava aceitando, por isso coloquei de volta por um tempo.</font>
+&nbsp;&nbsp;<font color="#ff0000">&bull;</font>Resolvido o bug de quando voc&ecirc; clicava v&aacute;ria vezes no bot&atilde;o e ele abria v&aacute;rias janelas, agora ele abre e fecha apenas uma.
 <br><br>
 <u><b>Vers&atilde;o 3.7</b></u>
 <br><br>
@@ -88,12 +97,11 @@ Primeira vers&atilde;o para Firefox:<br>
 <font color="#9400d3">&bull;</font>Primeira vers&atilde;o do DescicloApp para Firefox, completamente baseada na vers&atilde;o 3.7 do DescicloApp para Chrome e Opera.
 <br><br>
 </div>
-<div class="clear"></div>
+<br>
 </div>
 <div id="rodape">
 <div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
-<div style="display:none">
-<div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </div>
+<div style="display:none"><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </body>
 </html>
