--- a/DescicloApp/chrome/DescicloApp/paginas/busca.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/busca.html
@@ -35,7 +35,7 @@ a:visited {
 </head>
 <body>
 <div id="navbar-container" style="background: url('../imagens/batata.png') no-repeat bottom #f1f1f1;">
-<div id="navbar-content-title"><img src="../icons/icon_48.png">DescicloApp</div>
+<div id="navbar-content-title"><img src="../icons/icon_48.png"><br>DescicloApp</div>
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item">Changelog</li>
