--- a/DescicloApp/chrome/DescicloApp/paginas/opera.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/opera.html
@@ -27,7 +27,7 @@ a:visited {
 </head>
 <body>
 <div id="navbar-container" style="background: url('../imagens/batata.png') no-repeat bottom #f1f1f1;">
-<div id="navbar-content-title"><img src="../icons/icon_48.png">DescicloApp</div>
+<div id="navbar-content-title"><img src="../icons/icon_48.png"><br>DescicloApp</div>
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item">Changelog</li>
@@ -46,7 +46,7 @@ a:visited {
 4. Baixe normalmente<br>
 5. Pronto :)</div>
 <br><br>
-<div style="align:center;"><a href="../imagens/printdescicloappopera4.jpg" title="Clique para ampliar"><img src="../imagens/printdescicloappopera4.jpg" height="200"></a></div>
+<div style="align:center;"><a href="../imagens/printdescicloappopera4.jpg" title="Clique para ampliar"><img src="../imagens/printdescicloappopera4.jpg" height="300"></a></div>
 </div>
 <div style="display:none">
 <div id="descicloapp"/><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
